# ogon-greeter-qt

./: .gitignore  CMakeLists.txt  abstract_greeter.cpp  greeter_it.ts  meson.build  nice_greeter.cpp
